--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
